feat: created insert custom adapter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ robinhosz:
   client:
     address:
       url: http://localhost:8082/address
+
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/hexagonal
